# AppleBox

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRDPARTY.md
.github/workflows/: ci.yml
roms/: README.md
scripts/: fetch_test_data.sh
src/: main.cpp
src/core/: bus.h  cpu_core.h  device.h  machine.cpp  machine.h  rom_manifest.cpp  rom_manifest.h  savestate.cpp  savestate.h  scheduler.cpp  scheduler.h  sha256.cpp  sha256.h  types.h
src/cpu/m6502/: m6502_core.cpp  m6502_core.h
src/cpu/mame_shim/: emu.h
src/devices/: pia6821.cpp  pia6821.h
src/machines/: apple1.cpp  apple1.h
src/ui/: machine_config_dialog.cpp  machine_config_dialog.h  main_window.cpp  main_window.h
tests/: test_apple1.cpp  test_harte_6502.cpp  test_klaus_6502.cpp  test_rom_manifest.cpp  test_savestate.cpp  test_scheduler.cpp
